--- a/AboutMe.html
+++ b/AboutMe.html
@@ -20,7 +20,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto"">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
@@ -71,14 +71,7 @@
                 <li>
                   <a href="https://developer.mozilla.org/en-US/" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxLizeWZHPD-SwiFIWU7-G09Chaa2HTK7DPw&usqp=CAU"></a>
                 </li>
-                <li>
-                  
-                </li>
-                <li>
-                  
-                </li>
               </ul>
-
             </sidebar>
           </div>
         </div>
@@ -86,5 +79,7 @@
     </div>
   
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
