--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -52,5 +52,10 @@
 	<p>I love coding. It is fun, and exciting to get the immediate gratification of change on a page. Nevertheless, pseudocoding is the heartbeat of great software development. Without it, we would not have the means to communicate across different programming languages, and work through high-level problem analysis. In summary, pseudocode is vital to the success of any programmer. It is the starting point of thinking through a problem, regardless of the language used. Yet, it is more than just the starting point. It represents your brainstorming, your rough draft, and even editing/proofreading of finalized code. I think of pseudocode as a lesson plan for a teacher. It should give you everything you need for a project, much like how a lesson plan document should give a substitute teacher everything they need to teach on the Crusades. Now, before you begin coding next time, stop and remember your pseudocode!
 	</p>
 </div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
