--- a/blogWeek1.html
+++ b/blogWeek1.html
@@ -54,5 +54,7 @@
 
   <h3>Here's to Continued Learning and Personal Growth!</h3>
   <img src="img/happycoder.jpeg" alt="Excited Coder!">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
