--- a/blogWeek2.html
+++ b/blogWeek2.html
@@ -50,6 +50,7 @@
 <h3>Onboarding 101</h3>
 <p>Onboarding was unqiue for me. This was my first full week in the bootcamp, and my first full week out of the workplace. Working remote definitely has its challenges. It takes more time and effort to get help with even the smallest tasks, and building relationship and communciation is something that has to be done intentionally. Onboarding helped ease the transition through Slack Huddles as well as help channels of support. The best way for me to overcome these challenges is to continue asking for help and push myself harder into the pseudocode and logic every day. Here's to another week of growth, and hopefully great comprehension of JavaScript!</p> 
 
-    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
