--- a/blogWeek4.html
+++ b/blogWeek4.html
@@ -46,5 +46,7 @@
 <p>I can’t speak to all programmers, but I can say as a novice, I hate interruptions. There is nothing I hate more than being in the zone, in the midst of deep work, and have to stop. Either because of a question from a person, a distraction from a phone call, a daily task that needs to be completed, etc. Whatever the distraction, I hate them. When I am in the midst of deep work, I really feel like I am creating my very best product. I am creating what most represents me. Distractions take you out of that mindset, and it can be very difficult to get you back into that work zone.
 </p>
     
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
