--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -6,7 +6,11 @@
 	<title>Technical Blog Post-Pseudocode</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="CSS/blogstyling.css"></head>
+	<link rel="stylesheet" href="CSS/blogstyling.css">
+	<link rel="icon" href="favicon.jpeg" >
+
+
+</head>
 <nav class="navbar navbar-expand-lg navbar-dark">
 	<div class="container">
 	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
