--- a/blog-post-sprint-4.html
+++ b/blog-post-sprint-4.html
@@ -6,7 +6,10 @@
     <title>Blog Post Week 6</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="CSS/blogstyling.css"></head>
+    <link rel="stylesheet" href="CSS/blogstyling.css">
+    <link rel="icon" href="favicon.jpeg" >
+
+</head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
