--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,7 +46,7 @@
           <div class="col-sm-8 m-2 centered middle-top">
 
                 <img alt="My wife, my puppy, and myself" 
-                src="https://scontent.flex1-1.fna.fbcdn.net/v/t39.30808-6/285069147_10210246318232141_7262627262845953222_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=LidiIWNfhkIAX-qKjvv&_nc_ht=scontent.flex1-1.fna&oh=00_AfDgND5KyhzaEZeaMwA3067-KtVu2hw7PFMWC1tKl6uXeQ&oe=64AC037A"
+                src="https://scontent-ord5-2.xx.fbcdn.net/v/t39.30808-6/285069147_10210246318232141_7262627262845953222_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=kRxwk6JD4sAAX_yDEGc&_nc_ht=scontent-ord5-2.xx&oh=00_AfA7yOSt8Pb20Dls3dTU4oCfHN2TAR-YJesH5uvF9E_oAw&oe=64B5E6BA"
                 class="img-fluid p-4" style="max-height: 400px;">
                 <h2>About Me</h2>
                 <p>Hello there! A little bit about me: I'm a full stack web developer with an interest in creating highly engaging, fun websites of all kinds. I enjoy working on projects during my free time, to create the very best products for the future. Outside of my work, I love spending time with my wife and family, playing or coaching basketball, or cheering on my hometown Louisville Cardinals.</p>
