--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section id="home" class="text-white text-center py-5 mt-5">
     <div class="container">
-        <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU"
+        <img src='img/HeaderPic.jpg' style="max-width: 250px;"
         alt="John Tyler Stamm" 
         class="rounded-circle img-fluid ">
         <h1>Tyler Stamm: Software Developer</h1>
